--- a/css/styles.css
+++ b/css/styles.css
@@ -17,16 +17,26 @@ background-color: #f0f0f0;
 background-image: none;
 }
 
+header h1 {
+margin: 0 25px 0.6em;
+padding: 0.6em 0 0;
+text-align: left;
+}
+
 #incMenu {
 clear: both;
 float: left;
-width: 20%;
+width: 22%;
+min-width: 130px;
 }
 
 nav ul {
 list-style-type:none;
+text-align: left;
 clear: both;
 float: left;
+padding: 0;
+margin: 0 10px 0 25px;
 }
 nav ul li {
 clear: both;
@@ -36,12 +46,27 @@ float: left;
 main {
 clear: none;
 float: left;
-width: 75%;
+width: 73%;
 text-align: left;
+margin: 0 5px 0 25px;
 }
 
 video {
 width: 100%;
+}
+
+.videoWrapper {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
 #incFooter {
