--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ background-color: #f0f0f0;
 margin: 0 auto;
 padding: 0px;
 text-align: center;
-width: 80%;
+width: 85%;
 height: 100%;
 background-color: #f0f0f0;
 background-image: none;
@@ -27,7 +27,7 @@ text-align: left;
 clear: both;
 float: left;
 width: 22%;
-min-width: 130px;
+min-width: 140px;
 }
 
 nav ul {
@@ -36,7 +36,7 @@ text-align: left;
 clear: both;
 float: left;
 padding: 0;
-margin: 0 10px 0 25px;
+margin: 0 5px 0 25px;
 }
 nav ul li {
 clear: both;
@@ -74,3 +74,8 @@ clear: both;
 float: none;
 width: 100%;
 }
+footer {
+width: 100%;
+padding: 25px 0;
+}
+footer p {margin: 0;}
