--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ width: 100%;
 height: 100%;
 padding: 0px;
 background-image: url(../img/bg.jpg);
-background-color: #f0f0f0;
+background-color: #fbf8f9;
 }
 
 #wrap {
@@ -13,7 +13,7 @@ padding: 0px;
 text-align: center;
 width: 85%;
 height: 100%;
-background-color: #f0f0f0;
+background-color: #fbf8f9;
 background-image: none;
 }
 
@@ -21,7 +21,9 @@ header h1 {
 margin: 0 25px 0.6em;
 padding: 0.6em 0 0;
 text-align: left;
+color: #97283c;
 }
+header h1 a:hover {text-decoration: none;}
 
 #incMenu {
 clear: both;
@@ -41,7 +43,13 @@ margin: 0 5px 0 25px;
 nav ul li {
 clear: both;
 float: left;
+margin: 4px 0;
 }
+nav a, header h1 a {
+color: #97283c;
+text-decoration: none;
+}
+nav a:hover {text-decoration: underline;}
 
 main {
 clear: none;
@@ -51,23 +59,18 @@ text-align: left;
 margin: 0 5px 0 25px;
 }
 
-video {
-width: 100%;
-}
-
+video, audio {width: 100%;}
 .videoWrapper {
-	position: relative;
-	padding-bottom: 56.25%; /* 16:9 */
-	padding-top: 25px;
-	height: 0;
-}
+position: relative;
+padding-bottom: 56.25%; /* 16:9 */
+padding-top: 25px;
+height: 0;}
 .videoWrapper iframe {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-}
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;}
 
 #incFooter {
 clear: both;
@@ -77,5 +80,6 @@ width: 100%;
 footer {
 width: 100%;
 padding: 25px 0;
+text-align: left;
 }
-footer p {margin: 0;}
+footer p {margin: 0 25px;}
