--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,6 @@ padding: 0px;
 background-image: url(../img/bg.jpg);
 background-color: #fbf8f9;
 }
-
 #wrap {
 margin: 0 auto;
 padding: 0px;
@@ -16,7 +15,6 @@ height: 100%;
 background-color: #fbf8f9;
 background-image: none;
 }
-
 header h1 {
 margin: 0 25px 0.6em;
 padding: 0.6em 0 0;
@@ -31,7 +29,6 @@ float: left;
 width: 22%;
 min-width: 140px;
 }
-
 nav ul {
 list-style-type:none;
 text-align: left;
@@ -50,15 +47,16 @@ color: #97283c;
 text-decoration: none;
 }
 nav a:hover {text-decoration: underline;}
+p.browserupgrade{margin: 0; padding: 0.5em 0;}
 
 main {
 clear: none;
 float: left;
 width: 73%;
+min-height: 300px;
 text-align: left;
 margin: 0 5px 0 25px;
 }
-
 video, audio {width: 100%;}
 .videoWrapper {
 position: relative;
@@ -70,8 +68,8 @@ position: absolute;
 top: 0;
 left: 0;
 width: 100%;
-height: 100%;}
-
+height: 100%;
+}
 #incFooter {
 clear: both;
 float: none;
