--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@ width: 100%;
 height: 100%;
 padding: 0px;
 background-image: url(../img/bg.jpg);
+background-repeat: repeat;
 background-color: #fbf8f9;
 }
 #wrap {
@@ -21,7 +22,6 @@ padding: 0.6em 0 0;
 text-align: left;
 color: #97283c;
 }
-header h1 a:hover {text-decoration: none;}
 
 #incMenu {
 clear: both;
@@ -42,11 +42,11 @@ clear: both;
 float: left;
 margin: 4px 0;
 }
-nav a, header h1 a {
+nav a, nav a:visited, header h1 a, header h1 a:visited, header h1 a:active, header h1 a:hover {
 color: #97283c;
 text-decoration: none;
 }
-nav a:hover {text-decoration: underline;}
+nav a:hover, nav a:active {text-decoration: underline;}
 p.browserupgrade{margin: 0; padding: 0.5em 0;}
 
 main {
@@ -126,11 +126,11 @@ footer p {margin: 0 25px;}
 	opacity: 0.9;
 }
 #prev{
-	background: #000 url('https://dl.dropboxusercontent.com/u/65639888/image/prev.png') no-repeat center;
+	background: #000 url('../img/prev.png') no-repeat center;
 	left: 0px;
 }
 #next{
-	background: #000 url('https://dl.dropboxusercontent.com/u/65639888/image/next.png') no-repeat center;
+	background: #000 url('../img/next.png') no-repeat center;
 	right: 0px;
 }
 #pager{
